<resources>
    <string name="app_name">ClassyGo</string>

    <!--    the tips title -->
    <string name="trips_activity_title">Available Trips</string>
    <string name="join_trip">Join Trip</string>
    <string name="where_are_you_heading">Where are you heading?</string>

    <string name="reset_password_message">Sorry, It happens to people. \nJust provide your email and we will help you out</string>
    <string name="request_reset">Request Reset</string>
    <string name="working_to_reset_password">Working on Password Reset</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Email is Invalid</string>
    <string name="no_such_account">Email address or account unavailable</string>
    <string name="error_title">Something Went Wrong</string>
    <string name="reset_mail_sent">An Email With A Reset Link Has Been Sent To You. Kindly Check Your Email</string>
    <string name="back_to_login">LOGIN</string>
    <string name="reset_sent">Reset Link Sent</string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sing_up_as_driver">Sing Up As Driver</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="splash_activity">Splash Activity!</string>
    <string name="your_safety_our_concern">Your safety is our top most concern, ride with us</string>
    <string name="ride_with_us">Ride Safely</string>
    <string name="pay_faster">Pay faster and cashless</string>
    <string name="pay_faster_body">Secured and simple payment for your trips</string>
    <string name="journey_made_easy">Easily get to anywhere</string>
    <string name="journey_made_easy_body">Find your ride from the comfort of your phone</string>
    <string name="newly_install">CleanInstallation</string>
    <string name="cheking_seat_availabiliyy_in_bus">Cheking seat availabiliyy in bus</string>
    <string name="select_seat">SELECT SEAT</string>
    <string name="mumbai_pune">Mumbai - Pune</string>
    <string name="make_payment">Make Payment</string>
    <string name="tap_on_green_seat_to_book">Tap on green seat to book</string>

    <string name="play_service_not_available">Play service not available on this device</string>
    <string name="image_upload_failed">Failed to upload image, try again</string>
    <string name="title_new_trip">NEW TRIP</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_notification">NOTIFICATIONS</string>
    <string name="menu_notification">Notification</string>

    <string name="map_key">AIzaSyDr6tESJ1alk31KCDJKaQlL-6Gf2R0EEDM</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="title_payment_methods">PAYMENT METHODS</string>

    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_conf">Confirm new password</string>
    <string name="update_password_btn">Update password</string>
    <string name="logout_tv">Logout</string>
    <string name="title_change_password">CHANGE PASSWORD</string>

</resources>