<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#025ECC"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="Classy"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="GO"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--    <androidx.appcompat.widget.Toolbar-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="?attr/actionBarSize"-->
        <!--        android:gravity="center_horizontal">-->


        <!--    </androidx.appcompat.widget.Toolbar>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/create_account"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="45dp"
            app:srcCompat="@drawable/ic_undraw_travelers_qlt1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-12dp"
                android:background="@drawable/rounded_corner">

                <LinearLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/first_nameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:fontFamily="@font/roboto_thin"
                            android:hint="@string/first_name"
                            android:inputType="text"
                            android:textColor="@color/colorLightDarkHint"
                            android:textColorHint="@color/colorLightDarkHint" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/last_nameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_thin"
                            android:hint="@string/last_name"
                            android:inputType="text"
                            android:textColor="@color/colorLightDarkHint" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_email_address_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_thin"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorLightDarkHint" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_passwordEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_thin"
                            android:backgroundTint="@color/colorWhite"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/colorLightDarkHint" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <CheckBox
                        android:id="@+id/driver_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_thin"
                        android:text="@string/sing_up_as_driver"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="253dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_rounded_corner"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/get_started"
                        android:textColor="@color/colorWhite" />
                    <LinearLayout
                        android:id="@+id/bottom_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_have_an_account"
                            android:textColor="@color/colorBlack" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/goto_login_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>