<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="Classy"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="GO"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto_regular"
        android:text="Welcome Back!"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="45dp"
        app:srcCompat="@drawable/ic_undraw_travelers_qlt1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_bg_curved">

        <RelativeLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="-12dp">

<!--            <ProgressBar-->
<!--                android:id="@+id/login_progress"-->
<!--                style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:visibility="gone"-->
<!--                android:minHeight="50dp"-->
<!--                android:padding="8dp"-->
<!--                android:minWidth="50dp"-->
<!--                android:progressDrawable="@drawable/progress_states"/>-->


            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:orientation="vertical">


                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/email_address"
                        android:fontFamily="@font/roboto_thin"
                        android:inputType="text"
                        android:textColorHint="@color/colorLightDarkHint"
                        android:textColor="@color/colorLightDarkHint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_thin"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorLightDarkHint" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_rounded_corner"
                android:layout_marginBottom="20dp"
                android:layout_above="@id/bottom_container"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/bottom_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorBlack" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goto_signup_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>